fixing overflow on in-between grid size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1042,7 +1042,7 @@ img {
   grid-auto-flow: row;
   grid-template-columns: var(--section-template-columns);
   
-  @media (min-width: 65rem) {
+  @media (min-width: 85rem) {
     & {
       gap: 0 var(--section-layout-gap);
     }
